<resources>
    <string name="app_name">بشائر</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">بشائر</string>
    <string name="nav_header_subtitle">النسخة ١</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_searching">searching</string>
    <string name="test_title">الجزائري محرز قريب من الانتقال إلى مانشستر سيتي</string>
    <string name="action_sharing">share</string>
    <string name="action_adding_comment">add comment</string>
    <string name="share">Sharing via</string>
    <string name="test_small_title">title</string>
    <string name="test_number">0</string>
    <string name="your_name">الاسم الکریم</string>
    <string name="your_mail">البريد الإلكتروني</string>
    <string name="your_text">نص الرسالة</string>
    <string name="send">إرسال</string>
    <string name="cancel">إلغاء</string>
    <string name="send_comment_title">أرسل تعليقاً</string>
    <string name="comment_ready">Comment ready to send</string>
    <string name="comment_not_ready">comment is not sent</string>
    <string name="not_be_empty">لا يجب أن يكون فارغاً</string>
    <string name="cats">التصانيف</string>
    <string name="text_setting">إعدادات النص والخلفية</string>
    <string name="about_us">حول التطبيق</string>
    <string name="contact_us">اتصل بنا</string>
    <string name="share_app">مشاركة التطبيق</string>
    <string name="send_bugs">تقرير خطأ</string>
    <string name="try_again">حاول مجدداً</string>
    <string name="no_internet">يبدو أن الاتصال بالانترنت ضعيف أو غير متوفر</string>
    <string name="app_link">http://bshaer.net/download</string>
    <string name="share_title">تطبيق بشائر</string>
    <string name="share_des">نقترح عليكم تحميل تطبيق بشائر لمتابعة آخر الأخبار</string>

    <string name="title_activity_about_us">AboutUS</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="bshairMail">mailto:Bshaer.news@gmail.com</string>
    <string name="subject_mail">من تطبيق بشائر الدمام</string>
    <string name="say_some_thing">اكتب نصاً</string>
    <string name="send_mail">إرسال الرسالة</string>
    <string name="no_clinet_for_mail">لا يوجد تطبيقاً للبريد الالكتروني لإرسال الرسالة</string>
    <string name="subject_mail_error">إرسال خطأ من تطبيق بشائر للاندرويد</string>
    <string name="bshair_mail_erro">mailto:Bshaer.news@gmail.com</string>
    <string name="no_item">للأسف لا توجد نتيجة ... </string>
    <string name="no_comment">لا يوجد تعليق، يمكنك إضافة تعليق من الايقونة أعلاه</string>
    <string name="some_error">للأسف، حدث خطأ أثناء استلام المعلومات، يرجى إغلاق التطبيق والمحاولة من جديد</string>
    <string name="sending_news">أرسل خبراً</string>
    <string name="bshairMail_news">mailto:Bshaer.news@gmail.com</string>
    <string name="subject_mail_news">إرسال خبر من تطبيق بشائر</string>
    <string name="change_font_and_size">إعدادات النص</string>
    <string name="choose_font">اختر فونتاً للعرض</string>
    <string name="choose_size_font">اختر حجم الفونت</string>
    <string name="submit">موافق</string>
    <string name="comment_sent_to_admin">تم إرسال التعليق للإدارة، وبعد الموافقة سيتم النشر</string>
    <string name="cannot_send_comment">للأسف لم يتم إرسال التعليق بنجاح</string>
    <string name="search">بحث ...</string>
    <string name="mail_not_valid">يبدو أن البريد الإكتروني غير صحيح</string>
    <string name="commenet_error_send">للأسف إرسال التعليق غير مسموح</string>
    <string name="about_us_text"><![CDATA[<p>  تطبيق بشائر يغطي حاجة المجتمع في وجود منصة إلكترونية يمكن عبرها تبادل الأخبار الإجتماعية ومعرفة أخر مستجداتها عبر التطبيق, حيث يحتوي على أقسام متعددة تغطي احتياجات المستخدمين. بإمكان المستخدم أن يعرف ماهي أخر أخبار الوفيات, أو المواليد, أو مناسبات الزواج في المجتمع. أيضا يمكن عبر التطبيق تبادل الأعلانات التجارية والدورات التنموية والتي تسهم في دفع عجلة المجتمع إلى الأمام.     </p>]]></string>
    <string name="cat_name_title">التصنيف</string>
    <string name="author_name_title">المحرر</string>
    <string name="time_title">تاريخ النشر</string>
    <bool name="is_rtl">false</bool>

</resources>
