<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:orderInCategory="2">
        <item
            android:id="@+id/change_font_and_size"
            android:icon="@drawable/ic_menu_text_format_new_v"
            android:title="@string/change_font_and_size" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share_v"
            android:title="@string/share_app" />
        <!--<item-->
            <!--android:id="@+id/nav_about"-->
            <!--android:icon="@drawable/ic_menu_about_v"-->
            <!--android:title="@string/about_us" />-->
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_menu_contact_v"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/nav_error"
            android:icon="@drawable/ic_menu_send_bug_v"
            android:title="@string/send_bugs" />
    </group>

</menu>
