<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:gravity="bottom"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:padding="@dimen/activity_vertical_margin"
        android:layout_height="@dimen/nav_header_height"
        android:background="@drawable/nav_bshair_banner"
        >
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/app_icon_nav_header"
            android:layout_height="@dimen/app_icon_nav_header"
            android:layout_gravity="center"
            android:contentDescription="@string/nav_header_desc"
            app:srcCompat="@drawable/ic_menu_bshair_v" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/nav_header_title"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/nav_header_subtitle" />
    </LinearLayout>



    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_cats_drawer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>



</LinearLayout>
