<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/half_standard_margin">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/change_font_and_size"
        android:textAppearance="@style/TextAppearance.FontPath"
        android:textSize="@dimen/caption_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/picker_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/choose_font"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.FontPath_regular"
            android:textSize="@dimen/smal_caption_size"
            android:padding="@dimen/miniMargin"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/choose_size_font"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.FontPath_regular"
            android:textSize="@dimen/smal_caption_size"
            android:padding="@dimen/miniMargin"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/picker_view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/picker_view">

        <NumberPicker
            android:id="@+id/font_name_chooser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="@dimen/miniMargin"/>

        <NumberPicker
            android:id="@+id/font_size_chooser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/miniMargin"/>

    </LinearLayout>

    <WebView
        android:id="@+id/text_display_after_change_font"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/picker_view2" />


    <Button
        android:id="@+id/send_dialog_font_chooser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        android:gravity="start|center_vertical"
        android:text="@string/submit"
        android:textAppearance="@style/TextAppearance.FontPath_regular"
        android:textColor="?attr/colorAccent"
        android:textSize="@dimen/smal_caption_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_display_after_change_font" />

    <Button
        android:id="@+id/cancel_dialog_font_chooser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        android:gravity="start|center_vertical"
        android:text="@string/cancel"
        android:textAppearance="@style/TextAppearance.FontPath_regular"
        android:textSize="@dimen/smal_caption_size"
        app:layout_constraintStart_toEndOf="@+id/send_dialog_font_chooser"
        app:layout_constraintTop_toBottomOf="@+id/text_display_after_change_font" />

</android.support.constraint.ConstraintLayout>